--- a/css/styles.css
+++ b/css/styles.css
@@ -731,26 +731,47 @@ width: 100%;
     transform: translate(-50%);
 }
 
-.checkbox {
+.check-txt {
+    font-size: 1;
+    color: #757575;
     display: flex;
-    justify-content: baseline;
-    align-items: baseline;
+    justify-content: center;
 }
-
-#checkbox-btn {
+.check-txt::before {
+    content: '';
     width: 16px;
     height: 15px;
-    background: #2196F3;
+    border: 1px solid black;
     border-radius: 2px;
-    
+    margin-right: 7px;
 }
 
-#send-txt {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0.03em;
-    color: #757575;
+.modal-check:checked + .check-txt::before {
+    background-image: url(/images/icon-checkpng.png);
+    background-color: #2196F3;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.modal-check { 
+    visibility: hidden;
+}
+.check-icon {
+    margin-right: 7px;
+}
+.modal-input:hover {
+    border-color: #2196F3;
+    fill: #2196F3;
+}
+.modal-input:focus {
+    border-color: #2196F3;
+    fill: #2196F3;
+}
+.comment:hover {
+    color: #2196F3;
+}
+.cross-svg-icon:hover {
+    fill: #2196F3;
+    border-color: #2196F3;
 }
 #modal-comment {
     width: 100%;
